manifests/azure-resourcegraph-exporter-1.1.0.tgz-manifest.yaml
---
# Source: azure-resourcegraph-exporter/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-release-azure-resourceg
  namespace: default
  labels:
    helm.sh/chart: azure-resourcegraph-exporter-1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: azure-resourcegraph-exporter
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: azure-resourcegraph-exporter
    app.kubernetes.io/version: "23.6.0"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: azure-resourcegraph-exporter
  policyTypes: 
    - Ingress
    - Egress
  ingress: 
    []
  egress: 
    - ports:
      - port: 53
        protocol: TCP
    - ports:
      - port: 53
        protocol: UDP
    - ports:
      - port: 443
        protocol: TCP
---
# Source: azure-resourcegraph-exporter/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-release-azure-resourceg
  namespace: default
  labels:
    helm.sh/chart: azure-resourcegraph-exporter-1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: azure-resourcegraph-exporter
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: azure-resourcegraph-exporter
    app.kubernetes.io/version: "23.6.0"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http-metrics
      appProtocol: http
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: azure-resourcegraph-exporter
---
# Source: azure-resourcegraph-exporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-azure-resourceg
  namespace: default
  labels:
    helm.sh/chart: azure-resourcegraph-exporter-1.1.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: metrics
    app.kubernetes.io/part-of: azure-resourcegraph-exporter
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: azure-resourcegraph-exporter
    app.kubernetes.io/version: "23.6.0"
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/name: azure-resourcegraph-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/name: azure-resourcegraph-exporter
      annotations:
        checksum/config: "c71c12a93a34fdde45716b341ada217f8ea39797f9f5cb88a39b1e7e10ecbb1f"
    spec:
      serviceAccountName: my-release-azure-resourceg
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 1000
      containers:
        - name: azure-resourcegraph-exporter
          image: "docker.io/webdevops/azure-resourcegraph-exporter:23.6.0"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          volumeMounts:
            - mountPath: /config/
              name: config
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: config
          configMap:
            name: my-release-azure-resourceg
